hphp/hack/test/typecheck/as_expression/tuple4.php.exp
File "tuple4.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
  File "tuple4.php", line 3, characters 13-15:
  This is an int
  File "tuple4.php", line 6, characters 9-54:
  It is incompatible with a tuple of size 2
File "tuple4.php", line 6, characters 9-54:
Invalid "as" expression hint (Typing[4195])
  File "tuple4.php", line 6, characters 10-30:
  The "as" operator cannot be used with a function type
